--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
 
   build-linux:
     name: Build Linux
-#    needs: test
+    needs: test
     runs-on: ubuntu-latest
     container: neutrinog/concourse-tasks:latest
     env:
@@ -93,7 +93,7 @@ jobs:
 
   build-windows:
     name: Build Windows
-#    needs: test
+    needs: test
     runs-on: windows-latest
     env:
       TC_HELP_DESK_TOKEN: ${{ secrets.TC_HELP_DESK_TOKEN }}
@@ -122,11 +122,11 @@ jobs:
       - name: npm install
         run: npm ci
 
-#      - name: Download latest language names
-#        run: curl https://td.unfoldingword.org/exports/langnames.json > src/assets/langnames.json
+      - name: Download latest language names
+        run: curl https://td.unfoldingword.org/exports/langnames.json > src/assets/langnames.json
 
-#      - name: Update resources
-#        run: npm run update-resources
+      - name: Update resources
+        run: npm run update-resources
 
       - name: build windows
         run: |
@@ -169,7 +169,7 @@ jobs:
 
   build-macos:
     name: Build macOS
-#    needs: test
+    needs: test
     runs-on: macos-latest
     env:
       TC_HELP_DESK_TOKEN: ${{ secrets.TC_HELP_DESK_TOKEN }}
@@ -218,3 +218,24 @@ jobs:
         with:
           name: ${{ env.ARTIFACT_NAME }}
           path: ../artifacts/
+
+  notify:
+    name: Notify
+#    needs: [build-macos, build-windows, build-linux]
+    runs-on: linux-latest
+    steps:
+      - name: Notify Zulip
+        env:
+          TOKEN: ${{ secrets.ZULIP_TOKEN }}
+          USER: concourse-bot
+          ORG: unfoldingword
+          CHANNEL: SOFTWARE/github
+          SUBJECT: tC builds
+        run: |
+        $http_code
+        curl -o /dev/null -s -w "%{http_code}" -X POST https://${{ env.ORG }}.zulipchat.com/api/v1/messages \
+          -u ${{ env.USER }}@zulipchat.com:${{ env.TOKEN }} \
+          -d "type=stream" \
+          -d "to=${{ env.CHANNEL }}" \
+          -d "subject=${{ env.SUBJECT}}" \
+          -d "content=This is a 'hello world' from Github Actions."
