--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -228,6 +228,11 @@ jobs:
         run: |
           echo "::set-env name=HASH::$(echo $GITHUB_SHA | cut -c1-7)"
 
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+
       - name: Notify Zulip of pull request
 #        if: github.event_name == "pull_request"
         env:
