--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -226,7 +226,7 @@ jobs:
     steps:
       - name: Get short hash
         run: |
-          echo "::set-env name=HASH::$(echo $GITHUB_SHA | cut -c1-7)"
+          echo "::set-env name=HASH::$(echo $GITHUB_EVENT_AFTER | cut -c1-7)"
 
       - name: Dump GitHub context
         env:
@@ -242,6 +242,7 @@ jobs:
           CHANNEL: SOFTWARE/github
           SUBJECT: tC builds
           REPOSITORY: ${{ github.repository }}
+          SHA: ${{ github.event.after }}
           PR_NUMBER: ${{ github.event.number }}
           PR_TITLE: ${{ github.event.pull_request.title }}
         run: |
@@ -250,5 +251,5 @@ jobs:
             -d "type=stream" \
             -d "to=$CHANNEL" \
             -d "subject=$SUBJECT" \
-            -d "content=[$PR_TITLE #$PR_NUMBER](https://github.com/$REPOSITORY/pull/$PR_NUMBER) has new builds based on [$HASH](https://github.com/$REPOSITORY/pull/$PR_NUMBER/commits/$GITHUB_SHA).
-                        You can view logs and download artifacts from the [Checks](https://github.com/$REPOSITORY/pull/$PR_NUMBER/checks?sha=$GITHUB_SHA) tab."
+            -d "content=[$PR_TITLE #$PR_NUMBER](https://github.com/$REPOSITORY/pull/$PR_NUMBER) has new builds based on [$HASH](https://github.com/$REPOSITORY/pull/$PR_NUMBER/commits/$SHA).
+                        You can view logs and download artifacts from the [Checks](https://github.com/$REPOSITORY/pull/$PR_NUMBER/checks?sha=$SHA) tab."
