--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -221,12 +221,18 @@ jobs:
 
   notify:
     name: Notify
+#        if: github.event_name == "pull_request"
 #    needs: [build-macos, build-windows, build-linux]
     runs-on: ubuntu-latest
+    env:
+      REPOSITORY: ${{ github.repository }}
+      SHA: ${{ github.event.after }}
+      PR_NUMBER: ${{ github.event.number }}
+      PR_TITLE: ${{ github.event.pull_request.title }}
     steps:
       - name: Get short hash
         run: |
-          echo "::set-env name=HASH::$(echo $GITHUB_EVENT_AFTER | cut -c1-7)"
+          echo "::set-env name=SHORT_SHA::$(echo $SHA | cut -c1-7)"
 
       - name: Dump GitHub context
         env:
@@ -234,22 +240,17 @@ jobs:
         run: echo "$GITHUB_CONTEXT"
 
       - name: Notify Zulip of pull request
-#        if: github.event_name == "pull_request"
         env:
           TOKEN: ${{ secrets.ZULIP_TOKEN }}
           USER: concourse-bot
           ORG: unfoldingword
           CHANNEL: SOFTWARE/github
           SUBJECT: tC builds
-          REPOSITORY: ${{ github.repository }}
-          SHA: ${{ github.event.after }}
-          PR_NUMBER: ${{ github.event.number }}
-          PR_TITLE: ${{ github.event.pull_request.title }}
         run: |
           curl -o /dev/null -s -X POST https://$ORG.zulipchat.com/api/v1/messages \
             -u $USER@zulipchat.com:$TOKEN \
             -d "type=stream" \
             -d "to=$CHANNEL" \
             -d "subject=$SUBJECT" \
-            -d "content=[$PR_TITLE #$PR_NUMBER](https://github.com/$REPOSITORY/pull/$PR_NUMBER) has new builds based on [$HASH](https://github.com/$REPOSITORY/pull/$PR_NUMBER/commits/$SHA).
+            -d "content=[$PR_TITLE #$PR_NUMBER](https://github.com/$REPOSITORY/pull/$PR_NUMBER) has new builds based on [$SHORT_SHA](https://github.com/$REPOSITORY/pull/$PR_NUMBER/commits/$SHA).
                         You can view logs and download artifacts from the [Checks](https://github.com/$REPOSITORY/pull/$PR_NUMBER/checks?sha=$SHA) tab."
