--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -233,6 +233,7 @@ jobs:
     env:
       REPOSITORY: ${{ github.repository }}
       SHA: ${{ github.event.after }}
+      REF: ${{ github.ref }}
     steps:
       - name: Get short hash
         run: |
@@ -262,6 +263,10 @@ jobs:
             -d "content=[$PR_TITLE #$PR_NUMBER](https://github.com/$REPOSITORY/pull/$PR_NUMBER) has new builds based on [$SHORT_SHA](https://github.com/$REPOSITORY/pull/$PR_NUMBER/commits/$SHA).
                         You can view logs and download artifacts from the [Checks](https://github.com/$REPOSITORY/pull/$PR_NUMBER/checks?sha=$SHA) tab."
 
+      - name: Get branch name
+        if: github.event_name == 'push;
+        run: echo "::set-env name=BRANCH::$(node -p -e "'$REF'.substr(11)")" # trips off "refs/heads/"
+
       - name: Notify Zulip of push
         if: github.event_name == 'push'
         env:
@@ -270,12 +275,11 @@ jobs:
           ORG: unfoldingword
           CHANNEL: SOFTWARE/github
           SUBJECT: tC builds
-          REF: ${{ github.ref }} # TODO: cut down to just the branch name.
         run: |
           curl -o /dev/null -s -X POST https://$ORG.zulipchat.com/api/v1/messages \
             -u $USER:$TOKEN \
             -d "type=stream" \
             -d "to=$CHANNEL" \
             -d "subject=$SUBJECT" \
-            -d "content=[$REF](https://github.com/$REPOSITORY/tree/$REF) has new builds based on [$SHORT_SHA](https://github.com/$REPOSITORY/commit/$SHA).
+            -d "content=[$BRANCH](https://github.com/$REPOSITORY/tree/$REF) has new builds based on [$SHORT_SHA](https://github.com/$REPOSITORY/commit/$SHA).
                         You can view logs and download artifacts from the [Checks](https://github.com/$REPOSITORY/commit/$SHA/checks) tab."
