--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: Node CI
 
 on:
-#  TODO: run on other events as well
   push:
     branches:
       - master
@@ -228,7 +227,7 @@ jobs:
 
   notify:
     name: Notify
-#    needs: [build-macos, build-windows, build-linux]
+    needs: [build-macos, build-windows, build-linux]
     runs-on: ubuntu-latest
     env:
       REPOSITORY: ${{ github.repository }}
