--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -147,11 +147,11 @@ jobs:
           echo "Generating executable ../artifacts/${{ env.ARTIFACT_X64 }}"
           ./node_modules/.bin/gulp release-win64 --out=../artifacts/${{ env.ARTIFACT_X64 }}
 
-      - name: list directories
-        run: |
-          dir .
-          dir ../
-          dir ../artifacts
+#      - name: list directories
+#        run: |
+#          dir .
+#          dir ../
+#          dir ../artifacts
 
       - uses: actions/upload-artifact@v1
         name: Upload x64 artifacts
