--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,11 @@ jobs:
       CI: true
 
     steps:
+      - name: Node version
+        run: |
+          node --version
+          npm --version
+
       - name: Checkout codebase
         uses: actions/checkout@v1
         with:
@@ -108,6 +113,11 @@ jobs:
       CI: true
 
     steps:
+      - name: Node version
+        run: |
+          node --version
+          npm --version
+
       - name: Checkout codebase
         uses: actions/checkout@v1
         with:
@@ -184,6 +194,11 @@ jobs:
       CI: true
 
     steps:
+      - name: Node version
+        run: |
+          node --version
+          npm --version
+
       - name: Checkout codebase
         uses: actions/checkout@v1
         with:
