update checkout action for windows

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -122,10 +122,19 @@ jobs:
           node --version
           npm --version
 
-      - name: Checkout codebase
-        uses: actions/checkout@v1
-        with:
-          submodules: recursive
+      - uses: actions/checkout@v2
+
+      - name: Checkout submodules
+        shell: bash
+        run: |
+          auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+          git submodule sync --recursive
+          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+
+#      - name: Checkout codebase
+#        uses: actions/checkout@v1
+#        with:
+#          submodules: recursive
 
       - name: Read version and commit sha
         run:
