--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,18 @@ jobs:
         node --version
         npm --version
 
-    - name: Checkout codebase
-      uses: actions/checkout@v1
-      with:
-        submodules: recursive
+    - uses: actions/checkout@v2
+    - name: Checkout submodules
+      shell: bash
+      run: |
+        auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+        git submodule sync --recursive
+        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+
+#    - name: Checkout codebase
+#      uses: actions/checkout@v1
+#      with:
+#        submodules: recursive
 
     - name: npm install
       run: npm ci
@@ -61,10 +69,18 @@ jobs:
           node --version
           npm --version
 
-      - name: Checkout codebase
-        uses: actions/checkout@v1
-        with:
-          submodules: recursive
+      - uses: actions/checkout@v2
+      - name: Checkout submodules
+        shell: bash
+        run: |
+          auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+          git submodule sync --recursive
+          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+
+#      - name: Checkout codebase
+#        uses: actions/checkout@v1
+#        with:
+#          submodules: recursive
 
       - name: Read version and commit sha
         run: |
@@ -123,7 +139,6 @@ jobs:
           npm --version
 
       - uses: actions/checkout@v2
-
       - name: Checkout submodules
         shell: bash
         run: |
@@ -216,10 +231,18 @@ jobs:
           node --version
           npm --version
 
-      - name: Checkout codebase
-        uses: actions/checkout@v1
-        with:
-          submodules: recursive
+      - uses: actions/checkout@v2
+      - name: Checkout submodules
+        shell: bash
+        run: |
+          auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+          git submodule sync --recursive
+          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+
+#      - name: Checkout codebase
+#        uses: actions/checkout@v1
+#        with:
+#          submodules: recursive
 
       - name: Read version and commit sha
         run: |
