install specific version of node on windows and mac environments

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -133,7 +133,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v1
         with:
-          node-version: '8.x'
+          node-version: '8.16.1'
 
       - name: Node version
         run: |
@@ -228,7 +228,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v1
         with:
-          node-version: '8.x'
+          node-version: '8.16.1'
 
       - name: Node version
         run: |
