disabled push restriction to test
Commented out the push restriction so we can test if the notification works.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -330,7 +330,7 @@ jobs:
         run: echo "::set-env name=BRANCH::$(node -p -e "'$REF'.substr(11)")" # strips off "refs/heads/"
 
       - name: Notify Zulip of push
-        if: github.event_name == 'push'
+#        if: github.event_name == 'push'
         env:
           TOKEN: ${{ secrets.ZULIP_TOKEN }}
           USER: github-bot@unfoldingword.zulipchat.com
