fix so that unit tests must pass before builds are started.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
 
   build-linux:
     name: Build Linux
-#    needs: test
+    needs: test
     runs-on: ubuntu-latest
     container: neutrinog/concourse-tasks:latest
     env:
@@ -125,7 +125,7 @@ jobs:
 
   build-windows:
     name: Build Windows
-#    needs: test
+    needs: test
     runs-on: windows-latest
     env:
       TC_HELP_DESK_TOKEN: ${{ secrets.TC_HELP_DESK_TOKEN }}
@@ -220,7 +220,7 @@ jobs:
 
   build-macos:
     name: Build macOS
-#    needs: test
+    needs: test
     runs-on: macos-latest
     env:
       TC_HELP_DESK_TOKEN: ${{ secrets.TC_HELP_DESK_TOKEN }}
