--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -189,8 +189,8 @@ jobs:
 
       - name: bundle x64 windows
         run: |
-          echo "Generating executable ../artifacts/${{ env.ARTIFACT_X64 }}"
-          ./node_modules/.bin/gulp release-win64 --out=../artifacts/${{ env.ARTIFACT_X64 }}
+          echo "Generating executable ../artifacts/x64/${{ env.ARTIFACT_X64 }}"
+          ./node_modules/.bin/gulp release-win64 --out=../artifacts/x64/${{ env.ARTIFACT_X64 }}
 
 #      - name: list directories
 #        run: |
@@ -202,21 +202,21 @@ jobs:
         name: Upload x64 artifacts
         with:
           name: ${{ env.ARTIFACT_X64 }}
-          path: ../artifacts/
+          path: ../artifacts/x64/
 #     x32
       - name: Set x32 artifact name
         run: echo "::set-env name=ARTIFACT_X32::$(echo "${{ env.APP_NAME }}-win-x32-${{ env.APP_VERSION }}-${{ env.HASH }}.exe")"
 
       - name: bundle x32 windows
         run: |
-          echo "Generating executable ../artifacts/${{ env.ARTIFACT_X32 }}"
-          ./node_modules/.bin/gulp release-win32 --out=../artifacts/${{ env.ARTIFACT_X32 }}
+          echo "Generating executable ../artifacts/x32/${{ env.ARTIFACT_X32 }}"
+          ./node_modules/.bin/gulp release-win32 --out=../artifacts/x32/${{ env.ARTIFACT_X32 }}
 
       - uses: actions/upload-artifact@v1
         name: Upload x32 artifacts
         with:
           name: ${{ env.ARTIFACT_X32 }}
-          path: ../artifacts/
+          path: ../artifacts/x32/
 
   build-macos:
     name: Build macOS
