--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,9 @@ name: Node CI
 
 env:
   UPDATE_RESOURCES: true
+  REPOSITORY: ${{ github.repository }}
+  SHA: ${{ github.event.after }}
+  REF: ${{ github.ref }}
 
 on:
   push:
@@ -25,6 +28,10 @@ jobs:
       CI: true
 
     steps:
+#     - name: Dump GitHub context
+#       env:
+#         GITHUB_CONTEXT: ${{ toJson(github) }}
+#       run: echo "$GITHUB_CONTEXT"
     - name: Node version
       run: |
         node --version
@@ -189,8 +196,8 @@ jobs:
 
       - name: bundle x64 windows
         run: |
-          echo "Generating executable ../artifacts/${{ env.ARTIFACT_X64 }}"
-          ./node_modules/.bin/gulp release-win64 --out=../artifacts/${{ env.ARTIFACT_X64 }}
+          echo "Generating executable ../artifacts/x64/${{ env.ARTIFACT_X64 }}"
+          ./node_modules/.bin/gulp release-win64 --out=../artifacts/x64/${{ env.ARTIFACT_X64 }}
 
 #      - name: list directories
 #        run: |
@@ -202,21 +209,21 @@ jobs:
         name: Upload x64 artifacts
         with:
           name: ${{ env.ARTIFACT_X64 }}
-          path: ../artifacts/
+          path: ../artifacts/x64/
 #     x32
       - name: Set x32 artifact name
         run: echo "::set-env name=ARTIFACT_X32::$(echo "${{ env.APP_NAME }}-win-x32-${{ env.APP_VERSION }}-${{ env.HASH }}.exe")"
 
       - name: bundle x32 windows
         run: |
-          echo "Generating executable ../artifacts/${{ env.ARTIFACT_X32 }}"
-          ./node_modules/.bin/gulp release-win32 --out=../artifacts/${{ env.ARTIFACT_X32 }}
+          echo "Generating executable ../artifacts/x32/${{ env.ARTIFACT_X32 }}"
+          ./node_modules/.bin/gulp release-win32 --out=../artifacts/x32/${{ env.ARTIFACT_X32 }}
 
       - uses: actions/upload-artifact@v1
         name: Upload x32 artifacts
         with:
           name: ${{ env.ARTIFACT_X32 }}
-          path: ../artifacts/
+          path: ../artifacts/x32/
 
   build-macos:
     name: Build macOS
@@ -295,10 +302,6 @@ jobs:
     name: Notify
     needs: [build-macos, build-windows, build-linux]
     runs-on: ubuntu-latest
-    env:
-      REPOSITORY: ${{ github.repository }}
-      SHA: ${{ github.event.after }}
-      REF: ${{ github.ref }}
     steps:
       - name: Get short hash
         run: |
