--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -170,9 +170,9 @@ jobs:
 
       - name: Bundle environment variables
         run: |
-          echo "TC_HELP_DESK_TOKEN=${{ TC_HELP_DESK_TOKEN }}" >> .env
-          echo "TC_HELP_DESK_EMAIL=${{ TC_HELP_DESK_EMAIL }}" >> .env
-          echo "BUILD=${{ HASH }}" >> .env
+          echo "TC_HELP_DESK_TOKEN=${{ env.TC_HELP_DESK_TOKEN }}" >> .env
+          echo "TC_HELP_DESK_EMAIL=${{ env.TC_HELP_DESK_EMAIL }}" >> .env
+          echo "BUILD=${{ env.HASH }}" >> .env
 
       - name: npm install
         run: npm ci
