--- a/.gitignore
+++ b/.gitignore
@@ -1,63 +1,29 @@
-image/
-webalizer/
-dashboard/
-img/
-favicon.ico
-index.php
-bitnami.css
-applications.html
-timestamp.txt
-check_data.json
-.vscode/
-report.html
-jsconfig.json
-test/output
-/static/
-/vendor
-/release
-/docs/
-/.env
-/.vs/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# just in case people are lazy while writing tests
-__tests__/output
-output/
-# Needed for Webstorm
-.idea
-*.iml
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-#################
-## Eclipse
-#################
+# testing
+/coverage
 
-*.pydevproject
-.project
-.metadata
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.classpath
-.settings/
-.loadpath
+# production
+/build
+/dist
 
-# External tool builders
-.externalToolBuilders/
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-build/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Locally stored "Eclipse launch configurations"
-*.launch
-
-# CDT-specific
-.cproject
-
-# PDT-specific
-.buildpath
-
+/.idea
 
 #################
 ## Visual Studio
@@ -71,19 +37,7 @@ build/
 *.user
 *.sln.docstates
 
-# Build results
-
-[Dd]ebug/
-[Rr]elease/
-x64/
-temp/
-[Bb]in/
-[Oo]bj/
-xampp/
-# MSTest test Results
-[Tt]est[Rr]esult*/
-[Bb]uild[Ll]og.*
-
+# generated files
 *_i.c
 *_p.c
 *.ilk
@@ -105,155 +59,4 @@ xampp/
 *.vssscc
 .builds
 *.pidb
-*.log
 *.scc
-
-# Visual C++ cache files
-ipch/
-*.aps
-*.ncb
-*.opensdf
-*.sdf
-*.cachefile
-
-# Visual Studio profiler
-*.psess
-*.vsp
-*.vspx
-
-# Guidance Automation Toolkit
-*.gpState
-
-# ReSharper is a .NET coding add-in
-_ReSharper*/
-*.[Rr]e[Ss]harper
-
-# TeamCity is a build add-in
-_TeamCity*
-
-# DotCover is a Code Coverage Tool
-*.dotCover
-
-# NCrunch
-*.ncrunch*
-.*crunch*.local.xml
-
-# Installshield output folder
-[Ee]xpress/
-
-# DocProject is a documentation generator add-in
-DocProject/buildhelp/
-DocProject/Help/*.HxT
-DocProject/Help/*.HxC
-DocProject/Help/*.hhc
-DocProject/Help/*.hhk
-DocProject/Help/*.hhp
-DocProject/Help/Html2
-DocProject/Help/html
-
-# Click-Once directory
-publish/
-
-# Publish Web Output
-*.Publish.xml
-*.pubxml
-*.publishproj
-
-# NuGet Packages Directory
-## TODO: If you have NuGet Package Restore enabled, uncomment the next line
-#packages/
-
-# Windows Azure Build Output
-csx
-*.build.csdef
-
-# Windows Store app package directory
-AppPackages/
-
-# Others
-sql/
-*.Cache
-ClientBin/
-[Ss]tyle[Cc]op.*
-~$*
-*~
-*.dbmdl
-*.[Pp]ublish.xml
-*.pfx
-*.publishsettings
-
-# RIA/Silverlight projects
-Generated_Code/
-
-# Backup & report files from converting an old project file to a newer
-# Visual Studio version. Backup files are not needed, because we have git ;-)
-_UpgradeReport_Files/
-Backup*/
-UpgradeLog*.XML
-UpgradeLog*.htm
-
-# SQL Server files
-App_Data/*.mdf
-App_Data/*.ldf
-
-#############
-## Windows detritus
-#############
-
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Mac Stuff
-.DS_Store
-#############
-## Auth tokens and node modules
-#############
-/node_modules/
-npm-debug.log.*
-.auth
-Auth.json
-.config
-Authentication.js
-tests/testIO/*
-#############
-## Python
-#############
-
-*.py[cod]
-
-# Packages
-*.egg
-*.egg-info
-dist/
-out/
-eggs/
-parts/
-var/
-sdist/
-develop-eggs/
-.installed.cfg
-
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
-.coverage
-coverage/
-.tox
-.coveralls.yml
-
-#Translations
-*.mo
-
-
-#Mr Developer
-.mr.developer.cfg
-
-find-duplicate-dependencies.log
