--- a/package.json
+++ b/package.json
@@ -5,53 +5,29 @@
   "minCompatibleVersion": "2.1.0",
   "manifestVersion": "7",
   "description": "A bridge between TS and TM",
-  "main": "src/es6-init.js",
+  "private": true,
+  "main": "main.js",
   "scripts": {
-    "release-content-update": "node scripts/releaseContentUpdate",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "build": "yarn react-build && copyfiles package.json build/ && yarn electron-build",
+    "electron-start": "electron .",
+    "electron-build": "electron-packager ./build --out=dist",
+    "react-start": "craco start",
+    "react-build": "craco build",
+    "start": "concurrently \"yarn react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development yarn electron-start\"",
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "test": "craco test",
     "find:extra-locale": "node scripts/locale/find_extras.js src/locale/English-en_US.json src/js",
     "find:missing-locale": "node scripts/locale/find_missing.js src/locale/English-en_US.json src/js",
-    "start": "cross-env NODE_ENV=development electron src/es6-init.js -remote-debugging-port=9222",
-    "start-with-logger": "REDUX_LOGGER=true npm run start",
-    "update-version": "node ./scripts/versionScript.js",
     "locale-key-comparison": "node ./scripts/locale_key_comparison.js",
-    "npm-clean-up": "rm -rf node_modules/ && rm -rf tC_apps/*/node_modules && rm package-lock.json && npm i",
-    "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix",
-    "test": "eslint ./src && node --max-old-space-size=3072 ./node_modules/jest/bin/jest --logHeapUsage",
-    "ci-test": "eslint ./src && node --max-old-space-size=3072 ./node_modules/jest/bin/jest --logHeapUsage --coverage",
-    "release-osx": "npm i && gulp clean && npm i && npm run load-apps && gulp build --osx && gulp release --osx",
-    "coverage": "jest --coverage",
+    "npm-clean-up": "rm -rf node_modules/ && rm -rf src/tC_apps/*/node_modules && rm package-lock.json && npm i",
+    "release-content-update": "node scripts/releaseContentUpdate",
     "load-apps": "git submodule update --init --recursive",
-    "update-apps": "git submodule foreach --recursive git checkout develop && git submodule foreach --recursive git pull",
-    "install-electron-forge": "npm i -g electron-forge@3.2.0",
-    "prettier-resource": "prettier --single-quote --print-width 80 --trailing-comma all --write 'tcResources/**/*.json'",
-    "doc": "jsdoc -c jsdoc/jsdoc.json",
-    "update-resources": "node scripts/resources/updateResources.js tcResources en hi el-x-koine hbo",
     "overwrite-resources": "rm -rf tcResources/en/bibles tcResources/en/translationHelps tcResources/el-x-koine tcResources/hi && npm run update-resources",
-    "update-attributions": "node scripts/attributions/generateAttributionData.js src/js/components/home/license/attributionData.json"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
-      "!**/node_modules/**",
-      "!**/vendor/**",
-      "!scripts/resources",
-      "!src/main.js",
-      "!src/locale"
-    ],
-    "coverageDirectory": "coverage",
-    "setupFiles": [
-      "./testSetUp/shim.js",
-      "./testSetUp/enzyme.js"
-    ],
-    "snapshotSerializers": [
-      "jest-serializer-path"
-    ],
-    "testPathIgnorePatterns": [
-      "tcResources/*",
-      "tC_apps/*"
-    ],
-    "rootDir": "./"
+    "update-apps": "git submodule foreach --recursive git checkout develop && git submodule foreach --recursive git pull",
+    "update-attributions": "node scripts/attributions/generateAttributionData.js src/js/components/home/license/attributionData.json",
+    "update-resources": "node scripts/resources/updateResources.js tcResources en hi el-x-koine hbo",
+    "update-version": "node ./scripts/versionScript.js"
   },
   "repository": {
     "type": "git",
@@ -73,74 +49,65 @@
     "url": "https://github.com/unfoldingWord-dev/translationCore/issues"
   },
   "homepage": "https://github.com/unfoldingWord-dev/translationCore#readme",
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "24.9.0",
+    "@babel/core": "^7.8.3",
+    "@storybook/react": "^5.3.9",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^13.5.0",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "babel-loader": "^8.0.6",
     "bluebird": "3.5.1",
     "codecov": "3.0.2",
-    "cross-env": "5.1.6",
-    "electron": "3.0.11",
-    "electron-compilers": "5.9.0",
-    "electron-devtools-installer": "2.2.4",
-    "electron-packager": "9.1.0",
-    "electron-react-devtools": "0.5.3",
+    "cross-env": "^7.0.0",
+    "concurrently": "^5.0.2",
+    "copyfiles": "^2.2.0",
+    "electron": "6.0.7",
+    "electron-devtools-installer": "^2.2.4",
+    "electron-packager": "^14.2.0",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.8.0",
-    "eslint": "6.3.0",
-    "eslint-config-prettier": "6.3.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jest": "22.1.2",
-    "eslint-plugin-prettier": "3.1.0",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "2.0.1",
     "fetch-mock": "5.13.1",
     "glob": "7.1.3",
     "gulp": "4.0.0",
     "gulp-change": "1.0.0",
-    "jest": "23.6.0",
-    "jest-enzyme": "7.1.1",
-    "jest-serializer-path": "0.1.15",
-    "jsdoc": "3.6.3",
     "ncp": "2.0.0",
-    "prettier": "1.18.2",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "16.8.1",
-    "redux-jest": "1.1.1",
     "redux-mock-store": "1.3.0",
     "redux-test-utils": "0.1.3",
     "request-promise": "4.2.2",
+    "source-map-explorer": "^2.2.2",
     "spec-xunit-file": "0.0.1-3",
     "taffydb": "2.7.3",
     "temp": "0.8.3",
+    "typescript": "^3.7.5",
+    "wait-on": "^4.0.0",
     "yargs": "10.0.3"
   },
   "dependencies": {
+    "@craco/craco": "^5.6.3",
     "@material-ui/core": "3.8.3",
     "@material-ui/icons": "3.0.2",
-    "@neutrinog/electron-dl": "1.11.1",
     "@sendgrid/mail": "6.4.0",
     "adm-zip": "0.4.13",
     "agentkeepalive": "4.0.0",
     "archiver": "3.0.0",
     "axios": "0.19.1",
-    "babel-plugin-jest-hoist": "21.2.0",
-    "babel-plugin-transform-async-to-generator": "6.24.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.5",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "checking-tool-wrapper": "1.0.13",
+    "checking-tool-wrapper": "1.0.12",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
     "dotenv": "6.2.0",
-    "electron-compile": "6.4.4",
-    "electron-prebuilt-compile": "4.0.0",
     "enzyme-to-json": "3.3.5",
     "follow-redirects": "1.2.5",
     "fs-extra": "4.0.3",
@@ -158,16 +125,17 @@
     "ospath": "1.2.2",
     "path-extra": "3.0.0",
     "prop-types": "15.7.2",
-    "react": "16.8.6",
+    "react": "^16.12.0",
     "react-bootstrap": "0.32.4",
     "react-container-dimensions": "1.3.3",
     "react-dnd": "2.5.4",
     "react-dnd-html5-backend": "2.5.4",
-    "react-dom": "16.8.6",
+    "react-dom": "^16.12.0",
     "react-localize-redux": "3.5.3",
     "react-redux": "5.1.1",
     "react-remarkable": "1.1.3",
     "react-select": "1.2.0",
+    "react-scripts": "^3.3.0",
     "react-spotlight-clickable": "1.0.5",
     "react-toggle": "4.0.2",
     "react-tooltip": "3.6.0",
@@ -189,7 +157,7 @@
     "tc-source-content-updater": "0.6.14",
     "tc-strings": "0.1.7",
     "tc-tool": "3.0.3",
-    "tc-ui-toolkit": "0.15.10",
+    "tc-ui-toolkit": "0.15.9",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.14",
     "usfm-js": "2.0.2",
@@ -200,9 +168,5 @@
     "xregexp": "3.2.0",
     "yamljs": "0.3.0",
     "zip-folder": "1.0.0"
-  },
-  "peerDependencies": {
-    "react": "^0.14.0 || ^16",
-    "redux": "^2.0.0 || ^3.0.0"
   }
 }
