--- a/package.json
+++ b/package.json
@@ -59,21 +59,21 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@storybook/react": "^5.3.9",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^13.5.0",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "7.8.4",
+    "@storybook/react": "5.3.10",
+    "@types/jest": "24.9.1",
+    "@types/node": "13.7.0",
+    "@types/react": "16.9.19",
+    "@types/react-dom": "16.9.5",
+    "babel-loader": "8.0.6",
     "bluebird": "3.5.1",
     "codecov": "3.0.2",
-    "cross-env": "^7.0.0",
-    "concurrently": "^5.0.2",
-    "copyfiles": "^2.2.0",
+    "cross-env": "7.0.0",
+    "concurrently": "5.1.0",
+    "copyfiles": "2.2.0",
     "electron": "6.0.7",
-    "electron-devtools-installer": "^2.2.4",
-    "electron-packager": "^14.2.0",
+    "electron-devtools-installer": "2.2.4",
+    "electron-packager": "14.2.0",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.8.0",
     "fetch-mock": "5.13.1",
@@ -86,16 +86,16 @@
     "redux-mock-store": "1.3.0",
     "redux-test-utils": "0.1.3",
     "request-promise": "4.2.2",
-    "source-map-explorer": "^2.2.2",
+    "source-map-explorer": "2.2.2",
     "spec-xunit-file": "0.0.1-3",
     "taffydb": "2.7.3",
     "temp": "0.8.3",
-    "typescript": "^3.7.5",
-    "wait-on": "^4.0.0",
+    "typescript": "3.7.5",
+    "wait-on": "4.0.0",
     "yargs": "10.0.3"
   },
   "dependencies": {
-    "@craco/craco": "^5.6.3",
+    "@craco/craco": "5.6.3",
     "@material-ui/core": "3.8.3",
     "@material-ui/icons": "3.0.2",
     "@sendgrid/mail": "6.4.0",
@@ -125,17 +125,17 @@
     "ospath": "1.2.2",
     "path-extra": "3.0.0",
     "prop-types": "15.7.2",
-    "react": "^16.12.0",
+    "react": "16.12.0",
     "react-bootstrap": "0.32.4",
     "react-container-dimensions": "1.3.3",
     "react-dnd": "2.5.4",
     "react-dnd-html5-backend": "2.5.4",
-    "react-dom": "^16.12.0",
+    "react-dom": "16.12.0",
     "react-localize-redux": "3.5.3",
     "react-redux": "5.1.1",
     "react-remarkable": "1.1.3",
     "react-select": "1.2.0",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "3.3.1",
     "react-spotlight-clickable": "1.0.5",
     "react-toggle": "4.0.2",
     "react-tooltip": "3.6.0",
