--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "agentkeepalive": "4.0.0",
     "archiver": "3.0.0",
     "axios": "0.19.1",
-    "checking-tool-wrapper": "1.0.12",
+    "checking-tool-wrapper": "1.0.13-beta.9",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
@@ -125,12 +125,12 @@
     "ospath": "1.2.2",
     "path-extra": "3.0.0",
     "prop-types": "15.7.2",
-    "react": "16.12.0",
+    "react": "16.8.6",
     "react-bootstrap": "0.32.4",
     "react-container-dimensions": "1.3.3",
     "react-dnd": "2.5.4",
     "react-dnd-html5-backend": "2.5.4",
-    "react-dom": "16.12.0",
+    "react-dom": "16.8.6",
     "react-localize-redux": "3.5.3",
     "react-redux": "5.1.1",
     "react-remarkable": "1.1.3",
@@ -156,7 +156,7 @@
     "sudo-prompt": "6.2.1",
     "tc-source-content-updater": "0.6.14",
     "tc-strings": "0.1.7",
-    "tc-tool": "3.0.3",
+    "tc-tool": "3.0.4-beta.2",
     "tc-ui-toolkit": "0.15.9",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.14",
