--- a/package.json
+++ b/package.json
@@ -68,9 +68,10 @@
     "babel-loader": "8.0.6",
     "bluebird": "3.5.1",
     "codecov": "3.0.2",
-    "cross-env": "7.0.0",
     "concurrently": "5.1.0",
     "copyfiles": "2.2.0",
+    "cross-env": "7.0.0",
+    "css-loader": "^3.4.2",
     "electron": "6.0.7",
     "electron-devtools-installer": "2.2.4",
     "electron-packager": "14.2.0",
@@ -88,6 +89,7 @@
     "request-promise": "4.2.2",
     "source-map-explorer": "2.2.2",
     "spec-xunit-file": "0.0.1-3",
+    "style-loader": "^1.1.3",
     "taffydb": "2.7.3",
     "temp": "0.8.3",
     "typescript": "3.7.5",
