--- a/package.json
+++ b/package.json
@@ -186,7 +186,7 @@
     "simple-git": "1.43.0",
     "string-punctuation-tokenizer": "0.9.4",
     "sudo-prompt": "6.2.1",
-    "tc-source-content-updater": "github:translationCoreApps/tc-source-content-updater#hotfix-mannycolon-6695",
+    "tc-source-content-updater": "^0.6.17",
     "tc-strings": "0.1.7",
     "tc-tool": "3.0.3",
     "tc-ui-toolkit": "0.15.8",
