--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "codecov": "3.0.2",
     "concurrently": "5.1.0",
     "copyfiles": "2.2.0",
-    "cross-env": "7.0.0",
-    "css-loader": "^3.4.2",
+    "cross-env": "7.0.2",
+    "css-loader": "3.4.2",
     "electron": "6.0.7",
     "electron-devtools-installer": "2.2.4",
     "electron-packager": "14.2.0",
