--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@craco/craco": "5.6.3",
     "@material-ui/core": "3.8.3",
     "@material-ui/icons": "3.0.2",
+    "@neutrinog/electron-dl": "1.11.1",
     "@sendgrid/mail": "6.4.0",
     "adm-zip": "0.4.13",
     "agentkeepalive": "4.0.0",
