--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - npm run load-apps
 before_script:
   - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then npm run doc; fi
-  - NODE_OPTIONS="–max_old_space_size=4096"
+  - NODE_OPTIONS="--max-old-space-size=4096"
 script:
   - ./.concourse/test.sh
 deploy:
