--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "react-build": "craco build",
     "start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development npm run electron-start\"",
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "test": "craco test --testPathIgnorePatterns=src/tC_apps/",
+    "test": "craco test --testPathIgnorePatterns=src/tC_apps/ --logHeapUsage",
     "test-one": "craco test",
-    "ci-test": "node --max-old-space-size=8192 ./node_modules/@craco/craco/bin/craco test --watchAll --testPathIgnorePatterns=src/tC_apps/ --coverage --logHeapUsage",
+    "ci-test": "craco test -w='2' --watchAll --testPathIgnorePatterns=src/tC_apps/ --coverage --logHeapUsage",
     "find:extra-locale": "node scripts/locale/find_extras.js src/locale/English-en_US.json src/js",
     "find:missing-locale": "node scripts/locale/find_missing.js src/locale/English-en_US.json src/js",
     "locale-key-comparison": "node ./scripts/locale_key_comparison.js",
