--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "storybook": "start-storybook -p 9001 -c .storybook",
     "test": "craco test --testPathIgnorePatterns=src/tC_apps/ --logHeapUsage",
     "test-one": "craco test",
-    "ci-test": "craco test -w='2' --watchAll --testPathIgnorePatterns=src/tC_apps/ --coverage --logHeapUsage",
+    "ci-test": "craco test --max-old-space-size=8192 --maxWorkers=4 --watchAll --testPathIgnorePatterns=src/tC_apps/ --coverage --logHeapUsage",
     "find:extra-locale": "node scripts/locale/find_extras.js src/locale/English-en_US.json src/js",
     "find:missing-locale": "node scripts/locale/find_missing.js src/locale/English-en_US.json src/js",
     "locale-key-comparison": "node ./scripts/locale_key_comparison.js",
@@ -141,7 +141,7 @@
     "react-localize-redux": "3.5.3",
     "react-redux": "5.1.1",
     "react-remarkable": "1.1.3",
-    "react-scripts": "3.3.1",
+    "react-scripts": "^3.4.0",
     "react-select": "1.2.0",
     "react-spotlight-clickable": "1.0.5",
     "react-toggle": "4.0.2",
@@ -169,6 +169,7 @@
     "tsv-groupdata-parser": "0.9.15",
     "usfm-js": "2.0.2",
     "uuid": "3.2.1",
+    "weak": "^1.0.1",
     "word-aligner": "0.2.15",
     "wordmap": "0.8.0",
     "wordmap-lexer": "0.3.5",
