Before running eslint on /src

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development npm run electron-start\"",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "test-one": "craco test",
-    "test": "craco test --testPathIgnorePatterns=src/tC_apps/ --logHeapUsage",
+    "test": "eslint ./stories && craco test --testPathIgnorePatterns=src/tC_apps/ --logHeapUsage",
     "ci-test": "craco test --max-old-space-size=3072 --maxWorkers=4 --testPathIgnorePatterns=src/tC_apps/ --logHeapUsage --coverage",
     "find:extra-locale": "node scripts/locale/find_extras.js src/locale/English-en_US.json src/js",
     "find:missing-locale": "node scripts/locale/find_missing.js src/locale/English-en_US.json src/js",
@@ -79,6 +79,7 @@
     "electron-packager": "14.2.0",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.8.0",
+    "eslint-plugin-jest": "^23.8.2",
     "fetch-mock": "5.13.1",
     "glob": "7.1.3",
     "gulp": "4.0.0",
